// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fixture renders 1`] = `
<DocumentFragment>
  <div
    class="fixture completed"
  >
    <div
      class="subject"
    >
      <span
        class="competition"
      >
         Regions Cup: 
      </span>
      <span
        class="winner"
      >
        RiPS 8
      </span>
       - 
      <span>
        0 Kullervo/Überkleber
      </span>
    </div>
    <div
      class="info"
    >
      klo 15:00 
      <span
        class="location"
      >
        Riihimäki Keskuskenttä TN
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Fixture renders with only required props defined 1`] = `
<DocumentFragment>
  <div
    class="fixture completed"
  >
    <div
      class="subject"
    >
      <span
        class="competition"
      >
         Regions Cup: 
      </span>
      <span>
        RiPS 
      </span>
       - 
      <span>
         Kullervo/Überkleber
      </span>
    </div>
    <div
      class="info"
    >
      klo 15:00 
      <span
        class="location"
      />
    </div>
  </div>
</DocumentFragment>
`;
